2006-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala: use continue statements to decrease
	  indentation levels
	* vala/valasymbolbuilder.vala, vala/valasymbolresolver.vala,
	  vala/valasemanticanalyzer.vala, vala/valamemorymanager.vala,
	  vala/valacodegenerator.vala, vala/valaconditionalexpression.vala,
	  vala/valaconstant.vala: add interface documentation, use implicit
	  namespace specification
	* vala/valasemanticanalyzer.vala: check that if, while, for, and
	  conditional expression conditions are boolean
	* vala/valaclass.vala: remove dummy accessor, breaks build with old
	  vala compiler
	* compiler/valacompiler.vala: use implicit namespace specification
	* tests/test-016.vala: test conditional expressions
	* tests/Makefile.am: update

2006-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala: add interface documentation, use implicit
	  namespace specification
	* vala/valasymbolbuilder.vala, vala/valasymbolresolver.vala,
	  vala/valasemanticanalyzer.vala: adapt to change in CodeContext

2006-07-06  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valacodevisitor.vala, vala/valasymbolbuilder.vala,
	  vala/valasemanticanalyzer.vala, vala/valamemorymanager.vala,
	  vala/valacodegenerator.vala, vala/valatypereference.vala, vala/vala.h,
	  vala/Makefile.am: merge SimpleName into MemberAccess
	* vala/valasymbolresolver.vala, vala/valainterfacewriter.vala: adapt to
	  change in Class
	* vala/valasemanticanalyzer.vala: support non-static lambda expressions
	  and lambda expressions without return values
	* vala/valacodegenerator.vala: support conditional expressions, support
	  lambda expressions as signal handlers, support read-only and
	  write-only properties
	* vala/valacodevisitor.vala, vala/valamemorymanager.vala,
	  vala/valaassignment.vala: visit at beginning and end
	* vala/valacallback.vala: add instance property
	* vala/valasignal.vala: add get_callback method