@@ -1,5 +1,11 @@
 2006-07-07  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valaconstructor.vala, vala/valacontinuestatement.vala,
+	  vala/valadeclarationstatement.vala, vala/valadestructor.vala: add
+	  interface documentation, use implicit namespace specification
+
+2006-07-07  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valacodecontext.vala: use continue statements to decrease
 	  indentation levels
 	* vala/valasymbolbuilder.vala, vala/valasymbolresolver.vala,
